# antaeus

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  publish.yml
assets/img/logo/: logo.pixil
assets/img/shield/: shield.pixil
examples/compbot/: auton.rs  main.rs
src/: controller.rs  drivetrain.rs  lib.rs  opcontrol.rs
src/auton/: arcpid.rs  mod.rs  odom.rs  pid.rs
src/auton/pusuit/: algorithm.rs  geo.rs  mod.rs
src/display/: fonts.rs  graphics.rs  logo.rs  mod.rs
src/fs/: logger.rs  mod.rs
src/motion/: mod.rs  odom.rs
src/motion/odom/: algorithm.rs  devices.rs  legacy.rs  mod.rs  ptsht.rs  tracker.rs
src/motion/pid/: arcpid.rs  mod.rs  pid.rs  singlepid.rs
src/motion/pusuit/: algorithm.rs  geo.rs  mod.rs
src/opcontrol/: controller.rs  mod.rs
src/peripherals/: controller.rs  drivetrain.rs  mod.rs
src/robot/: controller.rs  drivetrain.rs  mod.rs
