[package]
name = "antaeus"
version = "0.2.6-beta.1"
edition = "2024"
readme = "README.md"
license = "AGPL-3.0-only"
authors = ["Harshal<saturnyx@disroot.org"]
description = "A Versatile Framework for Vexide"
repository = "https://github.com/Saturnyx/antaeus"
categories = ["science::robotics"]

[lib]
name = "antaeus"

[dependencies]
heapless = "0.9.2"
log = "0.4.28"

vexide = { version = "0.8.0" }
