[package]
name = "antaeus"
version = "0.2.7-rc.1"
edition = "2024"
readme = "README.md"
license = "AGPL-3.0-only"
authors = ["Harshal<saturnyx@disroot.org"]
description = "A Versatile Framework for Vexide"
repository = "https://github.com/Saturnyx/antaeus"
categories = ["science::robotics"]
keywords = ["Robotics", "bindings", "vex", "v5"]

[lib]
name = "antaeus"

[dependencies]
embedded-graphics-core = "0.4.0"
heapless = "0.9.2"
log = "0.4.28"
vex-sdk = "0.28.0"

vexide = { version = "0.8.0" }
