[package]
name = "antaeus"
version = "0.3.1"
edition = "2024"
readme = "README.md"
license = "AGPL-3.0-only"
authors = ["Harshal<saturnyx@disroot.org"]
description = "A Versatile Framework for Vexide"
repository = "https://github.com/Saturnyx/antaeus"
categories = ["science::robotics"]
keywords = ["Robotics", "bindings", "vex", "v5"]

[lib]
name = "antaeus"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-ttf = "=0.2.2"
heapless = "0.9.2"
humantime = "2.3.0"
log = "0.4.28"
rusttype = "0.9.3"
tinybmp = "0.6.0"
vex-sdk = "0.28.0"

vexide = { version = "0.8.0", features = ["full"] }

[dev-dependencies]
embedded-graphics-simulator = "0.8.0"
